force-app/main/default/objects/QuickbookSetting__c/QuickbookSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom settings info for quickbook connection application</description>
    <label>QuickbookSetting</label>
</CustomObject>