force-app/main/default/objects/QuickbookSetting__c/fields/CDCBatchFrequencyINHours__c.field-meta.xml
<CustomField>
    <fullName>CDCBatchFrequencyINHours__c</fullName>
    <description>This field will store the data in hours to fetch CDC data less than this field value to current date.</description>
    <inlineHelpText>Enter data in hours.</inlineHelpText>
    <label>CDCBatchFrequencyINHours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>