force-app/main/default/objects/QuickbookSetting__c/fields/IsTaxable__c.field-meta.xml
<CustomField>
    <fullName>IsTaxable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsTaxable</label>
    <type>Checkbox</type>
</CustomField>