force-app/main/default/objects/QuickbookSetting__c/fields/QBToSFCallout__c.field-meta.xml
<CustomField>
    <fullName>QBToSFCallout__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to able or disable callout from between Quickbook online to salesforce org.</description>
    <label>QBToSFCallout</label>
    <type>Checkbox</type>
</CustomField>