force-app/main/default/objects/QuickbookSetting__c/fields/SFToQBCallout__c.field-meta.xml
<CustomField>
    <fullName>SFToQBCallout__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to able or disable callout from between salesforce org to Quickbook online.</description>
    <label>SFToQBCallout</label>
    <type>Checkbox</type>
</CustomField>