force-app/main/default/objects/QuickbookSetting__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>SETUP_TYPE</columns>
    <columns>ClientId__c</columns>
    <columns>NAME</columns>
    <columns>ClientSecret__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>